Refactor to Unit of work and add CORS policies
Why there were so many changes?
- simply because I forgot to commit :)

--- a/server/ProductManager/.vscode/tasks.json
+++ b/server/ProductManager/.vscode/tasks.json
@@ -7,7 +7,7 @@
       "type": "process",
       "args": [
         "build",
-        "${workspaceFolder}/ProductManager/ProductManager.csproj",
+        "${workspaceFolder}/ProductManager.csproj",
         "/property:GenerateFullPaths=true",
         "/consoleloggerparameters:NoSummary"
       ],
@@ -19,7 +19,7 @@
       "type": "process",
       "args": [
         "publish",
-        "${workspaceFolder}/ProductManager/ProductManager.csproj",
+        "${workspaceFolder}/ProductManager.csproj",
         "/property:GenerateFullPaths=true",
         "/consoleloggerparameters:NoSummary"
       ],
@@ -32,7 +32,7 @@
       "args": [
         "watch",
         "run",
-        "${workspaceFolder}/ProductManager/ProductManager.csproj",
+        "${workspaceFolder}/ProductManager.csproj",
         "/property:GenerateFullPaths=true",
         "/consoleloggerparameters:NoSummary"
       ],
