--- a/client/ProductManager/package.json
+++ b/client/ProductManager/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@ngrx/store": "^12.4.0",
+    "bootstrap": "^5.1.1",
+    "hammerjs": "^2.0.8",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
