Add Login and Register API

--- a/server/ProductManager/appsettings.json
+++ b/server/ProductManager/appsettings.json
@@ -9,5 +9,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "ProductConnection": "Server=(localdb)\\MSSQLLocalDB;Initial catalog=ProductDB"
-  }
+  },
+  "JWT": {  
+    "ValidAudience": "http://localhost:4200",  
+    "ValidIssuer": "http://localhost:61955",  
+    "Secret": "HanhCute1810YenCute0812ChuongCute3001"  
+  }  
 }
