--- a/client/ProductManager/package.json
+++ b/client/ProductManager/package.json
@@ -25,6 +25,7 @@
     "@ngrx/store": "^12.4.0",
     "bootstrap": "^5.1.1",
     "hammerjs": "^2.0.8",
+    "ngx-toastr": "^14.1.3",
     "password-meter": "^3.7.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
